--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,10 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "colors": "^1.4.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.17.1",
+    "mongoose": "^6.8.4"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
